Change composer project name for packagist

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "acme/my-bundle",
+  "name": "pgmillon/symfony-bundle",
   "type": "symfony-bundle",
   "description": "",
   "keywords": [],
