--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-# Bootstrap
-app/bootstrap*
-
 # Symfony directories
 vendor/*
-*/logs/*
-*/cache/*
-web/uploads/*
-web/bundles/*
 
-# Configuration files
-app/config/parameters.ini
-app/config/parameters.yml
-/nbproject/private/
+# Netbeans directory
+nbproject
 /composer.lock
