Add the missing targetDir (hope it will help composer to run the callback at post-create-project)

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
       "Symfony\\BundleSkeleton": ""
     }
   },
+  "target-dir": "Symfony/BundleSkeleton",
   "scripts": {
     "post-create-project-cmd": "Symfony\\BundleSkeleton\\ScriptHandler::buildClasses"
   }
