--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,10 @@
   ],
   "require": {
     "php": ">=5.3.3",
-    "symfony/symfony": ">=2.3, <2.4-dev"
+    "symfony/symfony": ">=2.3, <2.4-dev",
+    "pgmillon/bundle-generator": "*@dev"
   },
-  "require-dev": {
-    "composer/composer": "1.0.0-alpha7"
-  },
-  "autoload": {
-    "psr-0": {
-      "Symfony\\BundleSkeleton": ""
-    }
-  },
-  "target-dir": "Symfony/BundleSkeleton",
   "scripts": {
-    "post-create-project-cmd": "Symfony\\BundleSkeleton\\ScriptHandler::buildClasses"
+    "post-create-project-cmd": "Symfony\\BundleGenerator\\ScriptHandler::buildClasses"
   }
 }
